--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Rinterio</title>
   </head>
-  <body class="max-w-[1440px] mx-auto my-10 font-[Manrope]">
+  <body class="max-w-[1440px] mx-auto my-10">
     <section>
       <div
         class="bg-gradient-to-r from-[rgba(255, 255, 255, 1)] to-[rgba(255, 255, 255, 0)]"
       >
-        <nav class="grid grid-cols-3 justify-between">
+        <nav class="grid grid-cols-3 gap-2">
           <div class="flex gap-3">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -94,9 +94,35 @@
         </nav>
 
         <!--banner-->
-        <div>
-          <img src="/assets/banner (1).png" alt="" />
-          <h1>A barn house of this design has a striking appearance</h1>
+        <div class="flex flex-col items-center text-center">
+          <img class="p-6" src="/assets/banner (1).png" alt="" />
+          <h1 class="font-[700] text-6xl p-5">
+            A barn house of this design has a striking appearance
+          </h1>
+          <p class="text-lg text-gray-600 px-44 py-4">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents, and
+            large windows that flood the space with natural light.
+          </p>
+          <button
+            class="flex flex-row gap-2 rounded-full bg-lime-200 p-3 font-bold items-center"
+          >
+            View Details
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-8 p-2 rounded-2xl bg-lime-300"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+              />
+            </svg>
+          </button>
         </div>
       </div>
     </section>
