--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Rinterio</title>
   </head>
-  <body class="max-w-[1440px] mx-auto my-10">
-    <section>
+  <body>
+    <section class="max-w-[1440px] mx-auto my-10">
       <div
         class="bg-gradient-to-r from-[rgba(255, 255, 255, 1)] to-[rgba(255, 255, 255, 0)]"
       >
@@ -99,7 +99,7 @@
           <h1 class="font-[700] text-6xl p-5">
             A barn house of this design has a striking appearance
           </h1>
-          <p class="text-lg text-gray-600 px-44 py-4">
+          <p class="text-lg text-gray-600 px-4 py-4">
             The barn house captivates with its blend of rustic charm and modern
             sophistication, featuring weathered wood, sleek metal accents, and
             large windows that flood the space with natural light.
@@ -126,5 +126,365 @@
         </div>
       </div>
     </section>
+
+    <!--About us-->
+    <div class="bg-gray-100 mx-0">
+      <img class="p-8" src="assets/Vector.png" alt="" />
+      <div class="px-[50px] grid gap-4 lg:grid-cols-2">
+        <div>
+          <button class="flex flex-row bg-white rounded-full p-2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6 text-gray-600"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+              />
+            </svg>
+
+            <h3 class="text-gray-600">About Us</h3>
+          </button>
+          <h2 class="text-3xl font-bold p-2">
+            We design thoughtful, liveable spaces
+          </h2>
+          <p class="text-gray-600 text-base p-2">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, featuring weathered wood, sleek metal accents.
+          </p>
+          <div class="bg-white flex flex-row gap-3 rounded-xl p-3 my-4">
+            <img src="assets/commercial.png" alt="" />
+            <div>
+              <h3 class="text-lg text-black">Commercial</h3>
+              <p class="text-base text-gray-600">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+          </div>
+          <div class="bg-white flex flex-row gap-3 rounded-xl p-3 my-4">
+            <img src="assets/residential.png" alt="" />
+            <div>
+              <h3 class="text-lg text-black">Residential</h3>
+              <p class="text-base text-gray-600">
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div>
+          <img
+            class="w-full rounded-xl h-full"
+            src="assets/Rectangle.png"
+            alt=""
+          />
+        </div>
+      </div>
+    </div>
+
+    <!--work process-->
+    <div class="bg-gray-100 flex flex-col px-[10%] py-[10%]">
+      <button
+        class="flex flex-row justify-center bg-white rounded-full p-3 mx-auto"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="size-6 text-gray-600"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+          />
+        </svg>
+        <h3>How we work</h3>
+      </button>
+      <h1 class="text-2xl font-bold p-2 text-center">Our Works Process</h1>
+      <p class="text-center pb-4 text-gray-600">
+        The barn house captivates with its blend of rustic charm and modern
+        sophistication, featuring weathered wood, sleek metal accents.
+      </p>
+      <div class="grid lg:grid-cols-4 gap-8">
+        <div class="bg-pink-300 rounded-xl p-4">
+          <img class="pb-2" src="assets/concept.png" alt="" />
+          <h3 class="text-lg font-[700]">Concept</h3>
+          <p class="text-gray-700">
+            The barn house captivates with its blend of rustic charm and modern.
+          </p>
+        </div>
+        <div class="bg-yellow-400 rounded-xl p-4">
+          <img class="pb-2" src="assets/flow-chart.png" alt="" />
+          <h3 class="text-lg font-[700]">Design Process</h3>
+          <p class="text-gray-700">
+            The barn house captivates with its blend of rustic charm and modern.
+          </p>
+        </div>
+        <div class="bg-green-300 rounded-xl p-4">
+          <img class="pb-2" src="assets/vision.png" alt="" />
+          <h3 class="text-lg font-[700]">Supervision</h3>
+          <p class="text-gray-700">
+            The barn house captivates with its blend of rustic charm and modern.
+          </p>
+        </div>
+        <div class="bg-blue-400 rounded-xl p-4">
+          <img class="pb-2" src="assets/budget-planning.png" alt="" />
+          <h3 class="text-lg font-[700]">Budget Planning</h3>
+          <p class="text-gray-700">
+            The barn house captivates with its blend of rustic charm and modern.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!--Latest Portfolio-->
+    <div class="bg-white p-[10%]">
+      <button
+        class="bg-green-200 rounded-full p-3 flex flex-row justify-center mx-auto my-3"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="size-6 text-gray-600"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+          />
+        </svg>
+        <h3>Explore our Latest works</h3>
+      </button>
+      <h1 class="text-2xl font-bold text-center p-2">Our Latest Portfolio</h1>
+      <p class="text-base text-gray-600 text-center">
+        The barn house captivates with its blend of rustic charm and modern
+        sophistication, featuring weathered wood, sleek metal accents.
+      </p>
+
+      <div class="grid grid-rows-2 gap-4 grid-cols-4 m-6">
+        <div class="col-span-3 border-2 rounded-2xl border-slate-100">
+          <div class="flex flex-row gap-3 p-4">
+            <img
+              class="rounded-2xl w-full h-full"
+              src="assets/img1.png"
+              alt=""
+            />
+            <div>
+              <h3 class="text-lg font-bold py-2 text-gray-700">Commercial</h3>
+              <p class="pb-10">
+                The barn house captivates with its blend of rustic charm and
+                modern.The barn house captivates with its blend of rustic charm
+                and modern.
+              </p>
+              <h4 class="text-lg font-bold text-gray-700">View Details</h4>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6 text-gray-600 rounded-full bg-lime-300 -rotate-45"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="border-2 p-4 rounded-2xl border-slate-100">
+          <img class="w-full h-full rounded-2xl" src="assets/img2.png" alt="" />
+        </div>
+
+        <div class="border-2 p-4 rounded-2xl border-slate-100">
+          <img class="w-full h-full rounded-2xl" src="assets/img3.png" alt="" />
+        </div>
+
+        <div class="col-span-2 border-2 rounded-2xl border-slate-100">
+          <div class="flex flex-row gap-3 p-4">
+            <img
+              class="rounded-2xl w-full h-full"
+              src="assets/img4.png"
+              alt=""
+            />
+            <div>
+              <h3 class="text-lg font-bold py-2 text-gray-700">Commercial</h3>
+              <p class="pb-10">
+                The barn house captivates with its blend of rustic charm and
+                modern.The barn house captivates with its blend of rustic charm
+                and modern.
+              </p>
+              <h4 class="text-lg font-bold text-gray-700">View Details</h4>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6 text-gray-600 rounded-full bg-lime-300 -rotate-45"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+
+        <div class="border-2 p-4 rounded-2xl border-slate-100">
+          <img class="w-full h-full rounded-2xl" src="assets/img5.png" alt="" />
+        </div>
+      </div>
+    </div>
+
+    <!--Next project-->
+    <div class="p-[30px]" style="background-image: url(/assets/bg.jpg)">
+      <button
+        class="bg-lime-200 opacity-5 rounded-full p-3 flex flex-row justify-center mx-auto my-3"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="size-6 text-gray-600"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+          />
+        </svg>
+        <h3>Let's Connect</h3>
+      </button>
+      <h1 class="text-2xl font-bold p-3 text-center">
+        Let's Discuss Next Project
+      </h1>
+      <p class="text-base text-gray-600 text-center">
+        The barn house captivates with its blend of rustic charm and modern
+        sophistication, featuring weathered wood, sleek metal accents.
+      </p>
+      <form class="p-[100px] relative">
+        <input
+          class="rounded-full w-[40%] bg-white p-3 m-3"
+          type="text"
+          placeholder="First Name*"
+        />
+        <input
+          class="rounded-full w-[40%] bg-white p-3 m-3"
+          type="text"
+          placeholder="Last Name*"
+        />
+        <input
+          class="rounded-full w-[40%] bg-white p-3 m-3"
+          type="text"
+          placeholder="Phone Number*"
+        />
+        <input
+          class="rounded-full w-[40%] bg-white p-3 m-3"
+          type="text"
+          placeholder="Email*"
+        />
+        <input
+          class="rounded-2xl bg-white p-3 m-3 w-full h-[100px]"
+          type="text"
+          placeholder="Write your message here"
+        />
+
+        <button
+          class="flex flex-row justify-center rounded-full bg-lime-300 p-3 m-3 w-full"
+        >
+          <h4 class="text-lg pr-2">Send Mail</h4>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="size-6 text-white bg-black rounded-full -rotate-45"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+            />
+          </svg>
+        </button>
+      </form>
+    </div>
+
+    <!--footer-->
+
+    <div class="bg-black p-14">
+      <div class="flex flex-row gap-2 justify-center">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="size-8 p-2 rounded-2xl bg-lime-300"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="m4.5 19.5 15-15m0 0H8.25m11.25 0v11.25"
+          />
+        </svg>
+        <h3 class="text-2xl text-white font-bold">Rinterio</h3>
+      </div>
+      <br />
+      <p class="text-slate-400 text-base text-center">
+        The barn house captivates with its blend of rustic charm and modern
+        sophistication, featuring weathered wood, sleek metal accents.
+      </p>
+      <div
+        class="p-10 flex flex-row gap-10 justify-center text-gray-300 text-balance"
+      >
+        <a href="#">Home</a>
+        <a href="#">Services</a>
+        <a href="#">Protfolio</a>
+        <a href="#">Blogs</a>
+        <a href="#">Contact Us</a>
+      </div>
+      <button
+        class="bg-lime-300 p-3 rounded-full flex flex-row gap-3 justify-center mx-auto"
+      >
+        <h4 class="text-lg text-black">Book Consult</h4>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="size-6 text-white bg-black rounded-full -rotate-45"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M17.25 8.25 21 12m0 0-3.75 3.75M21 12H3"
+          />
+        </svg>
+      </button>
+    </div>
   </body>
 </html>
